# quest-board

./: .gitignore  ANSIBLE_future.md  DEMO.md  DEPLOYMENT.md  DESIGN_NOTES_2026-05-19_donor_bounties_and_claim_reporting.md  README.md  SPEC.md  STATUS.md  TEST_PERSONAS.md  UI.md  economy.example.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_characters.py  0003_active_character.py  0004_reserve_quartermaster.py  0005_contact_verifier.py  0006_claim_completion.py  0007_total_xp_earned.py
app/: auth.py  config.py  csrf.py  db.py  errors.py  main.py  wiki_api.py
app/models/: __init__.py  api_key.py  base.py  character.py  character_class.py  npc_quest_giver.py  quest.py  quest_boost.py  quest_claim.py  taxonomy.py  user.py  xp_transaction.py
app/routes/: admin.py  auth.py  me.py  meta.py  pages.py  quests.py  taxonomy.py
app/schemas/: meta.py  quest.py  taxonomy.py
app/services/: characters.py  cursor.py  levels.py  quest_actions.py  quest_aggregates.py  quest_browse.py  quest_creation_gate.py  quest_detail.py  quest_queries.py  quest_recommendations.py  quest_serializer.py
app/templates/: admin_dashboard.html  admin_layout.html  admin_quest_edit.html  admin_quests.html  admin_templates.html  admin_users.html  base.html  error.html  index.html  login.html  me_character_new.html  me_characters.html  quest_create.html  quest_detail.html  quests_browse.html
data/: skill_vocab.yaml
scripts/: curate_discord.py  ingest_pool.py  mine_discord.py  quest_bot.py  scrub_discord_templates.py  seed.py  tag_skills.py
(+3 files in other folders)
